Added first text and changed title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monty Tech Greenhouse</title>
+    <title>Monty Tech Greenhouse Project</title>
 </head>
 <body>
-    
+    <h1> Welcome to the Monty Tech Greenhouse Project Website </h1>
+    <p> Created by (put names/Usernames here)</p>
 </body>
 </html>
