--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monty Tech Greenhouse Project</title>
+    <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
+    <title>Monty Tech Greenhouse Project</title> <!--DELETE PROJECT WHEN FINISHED-->
 </head>
 <body>
     <h1>Welcome to the Monty Tech Greenhouse Project Website </h1>
