--- a/masonry.html
+++ b/masonry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monty Tech Greenhouse Project</title>
+    <title>Monty Tech Greenhouse Project - Masonary</title>
 </head>
 <body>
 </body>
