Changed title of each new page created

--- a/masonry.html
+++ b/masonry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
-    <title>Monty Tech Greenhouse Project</title>
+    <title>Monty Tech Greenhouse Project - masonry</title>
 </head>
 <body>
 </body>
