Team developer Plans
Push for the team developer page. Changes also apply to index.html

--- a/team.html
+++ b/team.html
@@ -10,5 +10,17 @@
     <title>Monty Tech Greenhouse Project - team</title>
 </head>
 <body>
+
+    <h1>Team</h1>
+    <h3>Plans For This Page</h3>
+    <ul>
+        <li>Our github accts (links to our profiles)</li>
+        <li>Our github acct pictures</li>
+        <li>Our names... FULL names (First and last)</li>
+        <li>Make it look pretty</li>
+        <li>More stuff I can't think of right now</li>
+    </ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
