--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Monty Tech Greenhouse Project</title> <!--DELETE "PROJECT" WHEN FINISHED-->
 </head>
 <body class="text-center">
-    <nav class="navbar navbar-expand-lg bg-success">
+    <nav class="navbar fixed-top navbar-expand-lg bg-success">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="Website Files/assets/MT Greenhouse Favicon.png" class="img-fluid" style="width: 65px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-light active" aria-current="page" href="#">Home <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                <a class="nav-link text-light active" aria-current="page" href="index.html">Home <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
                   </svg></a>
@@ -30,7 +30,10 @@
                   </svg></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="masonry.html">Masonry Catalogue</a>
+                <a class="nav-link text-light" href="masonry.html">Masonry Catalogue <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wallet-fill" viewBox="0 0 16 16">
+                  <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v2h6a.5.5 0 0 1 .5.5c0 .253.08.644.306.958.207.288.557.542 1.194.542s.987-.254 1.194-.542C9.42 6.644 9.5 6.253 9.5 6a.5.5 0 0 1 .5-.5h6v-2A1.5 1.5 0 0 0 14.5 2z"/>
+                  <path d="M16 6.5h-5.551a2.7 2.7 0 0 1-.443 1.042C9.613 8.088 8.963 8.5 8 8.5s-1.613-.412-2.006-.958A2.7 2.7 0 0 1 5.551 6.5H0v6A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5z"/>
+                </svg></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="team.html">Developers <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -46,13 +49,20 @@
         </div>
       </nav>
 
+      <br>
+      <br>
+      <br>
+      <br>
 
     
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-10 m-auto">
+        <div class="row opening-img text-light">
+            <div class="col-sm-6 m-auto">
                 <h1 class="HUGE">
                     Welcome to the Monty Tech Greenhouse Project Website
+                    <br>
+                    <br>
+                    <br>
                 </h1>
             </div>
         </div>
