Changes to homepage
Fixed homepage, added backgrounds

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/x-icon" href="Website Files/assets/MT Greenhouse Favicon.png">
     <title>Monty Tech Greenhouse Project</title> <!--DELETE "PROJECT" WHEN FINISHED-->
 </head>
-<body class="text-center">
-    <nav class="navbar fixed-top navbar-expand-lg bg-success">
+<body class="text-center bkgd-img-index">
+    <nav class="navbar fixed-top navbar-expand-lg bg-success border-bottom border-warning border-5">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="Website Files/assets/MT Greenhouse Favicon.png" class="img-fluid" style="width: 65px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,15 +55,20 @@
       <br>
 
     
-    <div class="container-fluid">
-        <div class="row opening-img text-light">
-            <div class="col-sm-6 m-auto">
-                <h1 class="HUGE">
-                    Welcome to the Monty Tech Greenhouse Project Website
-                    <br>
-                    <br>
-                    <br>
-                </h1>
+    <div class="container-fluid p-5">
+        <div class="row text-light flwr-bknd rounded border border-5 border-dark">
+            <div class="col-sm-10 m-auto">
+              <br>
+              <br>
+              <br>
+              <br>
+              <h1 class="HUGE">
+                <b><span class="MT-light">Monty Tech</span> <span class="GREEN-light">Greenhouse</span></b>
+              </h1>
+              <br>
+              <br>
+              <br>
+              <br>
             </div>
         </div>
     </div>
