--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
       <br>
       <br>
       <br>
+      <br>
 
     
-    <div class="container-fluid p-5">
-        <div class="row text-light flwr-bknd rounded border border-5 border-dark">
-            <div class="col-sm-10 m-auto">
+    <div class="container-fluid">
+        <div class="row text-light">
+            <div class="col-sm-10 m-auto flwr-bknd border border-5 p-5 rounded text-end">
               <br>
               <br>
               <br>
               <br>
               <h1 class="HUGE">
-                <b><span class="MT-light">Monty Tech</span> <span class="GREEN-light">Greenhouse</span></b>
+                  <b><span class="MT-light">Monty Tech</span> <span class="GREEN-light">Greenhouse</span></b>
               </h1>
-              <br>
               <br>
               <br>
               <br>
