--- a/index.html
+++ b/index.html
@@ -75,21 +75,20 @@
 
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo take by: <DEVELOPER NAME>" class="img-fluid rad border border-5" style="width: 700px">
-          </div>
+            <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo take by: <DEVELOPER NAME>" class="img-fluid rad border border-5" style="width: 700px" title="placeholder" >
+          </div>          
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Countless Beautiful Flowers</h1>
             <h3>Our plants will make your house stand out in your neiborhood.</h3>
           </div>
         </div>
-
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Hand-Made Statues</h1>
             <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
           </div>
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo take by: <DEVELOPER NAME>" class="img-fluid rad border border-5" style="width: 700px">
+            <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo take by: <DEVELOPER NAME>" class="img-fluid rad border border-5" style="width: 700px" title="placeholder">
           </div>
         </div>
 
