--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
   
         <li>Our names... FULL names (First and last)</li>
         <p class="text-light"> <i> fig 1</i> Zach put ur desired name here (Github Username, then First name and Last inital )</p>
-        <p class="background-text-light"> <i> fig 2</i>  Coco put ur desired name here (Github Username, then First name and Last inital )    </p>
+        <p class="background-text-light"> <i> fig 2</i>  mus_gezora (CocoCrawlt, Coco B)    </p>
         <p> <i> fig 3</i> Asep3192 (Real first Name and Last intial: Adam S) </p>
         <p> <i> fig 4</i> Davis put ur desired name here (Github Username, then First name and Last inital ) </p>
         <li>Make it look pretty</li>
