Developer page update
team.html updated. Prepared good changes, just changing name. Part 1.

--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
         <p class="text-light"> <i> fig 1</i> Zach put ur desired name here (Github Username, then First name and Last inital )</p>
         <p class="background-text-light"> <i> fig 2</i>  mus_gezora (CocoCrawlt, Coco B)    </p>
         <p> <i> fig 3</i> Asep3192 (Real first Name and Last intial: Adam S) </p>
-        <p> <i> fig 4</i> Davis put ur desired name here (Github Username, then First name and Last inital ) </p>
+        <p> <i> fig 4</i> Davis put ur desired name here (UniversalDummy (School account), Davis H.) </p>
         <li>Make it look pretty</li>
         
         <li>More stuff I can't think of right now</li>
