Text adjustments to Developers page

--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
       <div class="container-fluid p-5">
         <div class="row p-5">
           <div class="col-sm-8 m-auto bg-danger p-5 border border-5 border-dark rad10">
-            <h1 class="text-light">The</h1>
+           <!-- <h1 class="text-light">The</h1>-->
             <h1 class="HUGE text-light">Developer Team</h1>
           </div>
         </div>
