Added Website Creation Date Part 1 and changed text color

--- a/team.html
+++ b/team.html
@@ -120,6 +120,11 @@
         <li>More stuff I can't think of right now</li>
     </ul>
 
+    <footer>
+    <p class="text-info"> <span style="text-align: center;">Website creation date: March 31st, 2025 </span></p> 
+    </footer>
+    <!--Davis's Footer from home page-->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="Website Files/scripts/script.js"></script>
   </body>
