Added footer with Website creation date

--- a/team.html
+++ b/team.html
@@ -177,10 +177,18 @@
         <li>More stuff I can't think of right now</li>
     </ul>
 
-    <footer>
+    <!--<footer>
     <p class="text-info"> <span style="text-align: center;">Website creation date: March 31st, 2025 </span></p> 
-    </footer>
+    </footer>-->
     <!--Davis's Footer from home page-->
+    <footer class=" m-auto  p-1  text-light">
+         <!--      <a href="#" class="text-light no-underline">Top of Page</a>-->
+        </div>
+        <div class="m-auto text-center">
+         <p> <span style="text-align: center;">Website creation date: March 31st, 2025 </span></p> 
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="Website Files/scripts/script.js"></script>
