--- a/team.html
+++ b/team.html
@@ -168,8 +168,8 @@
          
   
         <!--<li class="text-light">Our names... FULL names (First and last)</li>-->
-        <p class="text-info"> <i> fig 1</i> Davis put ur desired name here (UniversalDummy (School account), Davis H.) </p>
-        <p class="text-info"> <i> fig 2</i> Asep3192 (Real first Name and Last intial: Adam S)  </p>
+        <p class="text-info"> <i> fig 1</i>UniversalDummy (School account), Davis H. </p>
+        <p class="text-info"> <i> fig 2</i> Asep3192 (Name & Last initial: Adam S)  </p>
         <p class="text-info"> <i> fig 3</i> zachary17556 (zachary17556, Zachary LO) </p>
         <p class="text-info"> <i> fig 4</i> mus_gezora (CocoCrawlt, Coco B)   </p>
         <li class="text-info">Make it look pretty</li>
