Never call me CocoCrawlt ever again

--- a/team.html
+++ b/team.html
@@ -134,7 +134,7 @@
           
         </div>
         <div class="col-sm-5 text-start CCC_bg_color border border-dark border-5 rounded p-5">
-          <h1 class="big"><b>CocoCrawlt</b></h1>
+          <h1 class="big"><b>CocoCrawl</b></h1>
           <h2>Coco B.</h2>
           <hr class="border border-2 border-dark rounded">
           <div class="row pt-3">
@@ -151,7 +151,7 @@
               <a href="" target="_blank"> <img src="" alt="" class="rad" title="fig 3 - asep3192">
               </a>
               <a href="https://github.com/CocoCrawlt" target="_blank"><img src="https://yt3.googleusercontent.com/hT5o21w9oe9Nj-RP5fB-BWDmhPy2kK4lVf57K4f4ZG6xPnM5ucAvYYR2-1CvcZRGo9kJZS2Tcw=s160-c-k-c0x00ffffff-no-rj" alt="CocoCrawl github" style="width: 250px;" class="rad img-fluid border border-dark boxShadowingExpand_hover" title="fig 4 - CocoCrawlt"></a>
-              <h6 class="pt-5"><b>CocoCrawlt's GitHub Profile</b></h6>
+              <h6 class="pt-5"><b>CocoCrawl's GitHub Profile</b></h6>
             </div>
           </div>
         </div>
