--- a/team.html
+++ b/team.html
@@ -171,7 +171,7 @@
         <p class="text-info"> <i> fig 1</i>UniversalDummy (School account), Davis H. </p>
         <p class="text-info"> <i> fig 2</i> Asep3192 (Name & Last initial: Adam S)  </p>
         <p class="text-info"> <i> fig 3</i> zachary17556 (zachary17556, Zachary LO) </p>
-        <p class="text-info"> <i> fig 4</i> mus_gezora (CocoCrawlt, Coco B)   </p>
+        <p class="text-info"> <i> fig 4</i> mus_gezora (CocoCrawl, Coco B)   </p>
         <li class="text-info">Make it look pretty</li>
         
         <li>More stuff I can't think of right now</li>
