Those who use proper grammar:

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="row text-light">
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo take by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid rad border border-5" style="width: 700px">
+            <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid rad border border-5" style="width: 700px">
           </div>
           <div class="col-sm-6 m-auto p-3">
             <h1 class="big">Countless Beautiful Flowers</h1>
@@ -89,7 +89,7 @@
             <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
           </div>
           <div class="col-sm-6 m-auto p-3">
-            <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo take by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
+            <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
           </div>
         </div>
 
