--- a/masonry.html
+++ b/masonry.html
@@ -48,7 +48,33 @@
       </div>
     </div>
   </nav>
-    
+  
+  <div class="container-fluid p-5">
+    <div class="border rounded-5 border-dark border-5 dark_green_bknd p-5">
+
+      <div class="row text-light">
+        <div class="col-sm-6 m-auto p-3">
+          <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid rad border border-5" style="width: 700px">
+        </div>
+        <div class="col-sm-6 m-auto p-3">
+          <h1 class="big">Countless Beautiful Flowers</h1>
+          <h3>Our plants will make your house stand out in your neiborhood.</h3>
+        </div>
+      </div>
+
+      <div class="row text-light">
+        <div class="col-sm-6 m-auto p-3">
+          <h1 class="big">Hand-Made Statues</h1>
+          <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
+        </div>
+        <div class="col-sm-6 m-auto p-3">
+          <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="Website Files/scripts/script.js"></script>
 </body>
