--- a/masonry.html
+++ b/masonry.html
@@ -54,18 +54,18 @@
 
       <div class="row text-light">
         <div class="col-sm-6 m-auto p-3">
-          <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder" class="img-fluid rad border border-5" style="width: 700px">
+          <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
         </div>
         <div class="col-sm-6 m-auto p-3">
-          <h1 class="big">Countless Beautiful Flowers</h1>
-          <h3>Our plants will make your house stand out in your neiborhood.</h3>
+          <h1 class="big">PLACEHOLDER</h1>
+          <h3>PLACEHOLDER</h3>
         </div>
       </div>
 
       <div class="row text-light">
         <div class="col-sm-6 m-auto p-3">
-          <h1 class="big">Hand-Made Statues</h1>
-          <h3>Hand crafted cement lawn statues made by Monty Tech's Masonry Shop</h3>
+          <h1 class="big">PLACEHOLDER</h1>
+          <h3>PLACEHOLDER</h3>
         </div>
         <div class="col-sm-6 m-auto p-3">
           <img src="Website Files/assets/PLACEHOLDER.jpg" alt="Photo taken by: <DEVELOPER NAME>"  title="placeholder"  class="img-fluid rad border border-5" style="width: 700px">
