--- a/plants.html
+++ b/plants.html
@@ -55,70 +55,70 @@
   <div id="carouselExampleFade p-5" class="carousel slide carousel-fade">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" class="d-block w-100" alt="Purple flowers.">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/Pink_Flower.JPG" class="d-block w-100" alt="A pink flower.">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-100" alt="A placeholder image. Please remember to replace this!">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
