--- a/plants.html
+++ b/plants.html
@@ -130,6 +130,46 @@
     </button>
   </div>
 
+  <h2> Table</h2>
+
+<table>
+  <tr>
+    <th>Subject</th>
+    <th>Subject</th>
+    <th>Subject</th>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+</table>
+
 
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
