Commented out couesal that Coco added
(not needed)

--- a/plants.html
+++ b/plants.html
@@ -51,7 +51,7 @@
   <br>
   <br>
 
-  <div id="carouselExampleFade p-5" class="carousel slide carousel-fade">
+ <!-- <div id="carouselExampleFade p-5" class="carousel slide carousel-fade">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" class="d-block w-50" alt="Purple flowers.">
@@ -128,7 +128,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+  </div>-->
 
   <h2> Table</h2>
 
