--- a/masonry.html
+++ b/masonry.html
@@ -48,13 +48,51 @@
     </div>
   </nav>
   
-  <div class="container-fluid p-5">
-    <div class="border rounded-5 border-dark border-5 dark_green_bknd p-5">
+  <br>
+  <br>
+  <br>
+  <br>
+  
+  <h2> Table</h2>
 
-      
-
-    </div>
-  </div>
+  
+<table>
+  <tr>
+    <th>Subject</th>
+    <th>Subject</th>
+    <th>Subject</th>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+  <tr>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+    <td>Placeholder</td>
+  </tr>
+</table>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="Website Files/scripts/script.js"></script>
