Masonry table stuff

--- a/masonry.html
+++ b/masonry.html
@@ -59,8 +59,8 @@
 <table>
   <tr>
     <th>Image</th>
-    <th>Subject</th>
-    <th>Subject</th>
+    <th>Name</th>
+    <th>Price</th>
   </tr>
   <tr>
     <td><img src="Website Files/assets/Flowers/placeholder.png" alt="A placeholder image. Please remember to replace this!"></td>
