--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Monty Tech Greenhouse | Home</title> <!--DELETE "PROJECT" WHEN FINISHED-->
 </head>
 <body class="text-center bkgd-img-index">
-    <nav class="navbar fixed-top navbar-expand-lg bg-success border-bottom border-warning border-5">
+    <nav class="navbar fixed-top navbar-expand-lg bg-success border-MT-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="Website Files/assets/MT Greenhouse Favicon.png" class="img-fluid rotate" style="width: 65px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
     
     <div class="container-fluid p-5">
         <div class="row text-light">
-            <div class="col-sm-10 m-auto flwr-bknd border border-5 p-5 rounded text-end">
+            <div class="col-sm-10 m-auto flwr-bknd border border-success border-5 p-5 rounded text-end">
               <br>
               <br>
               <br>
