--- a/plants.html
+++ b/plants.html
@@ -52,84 +52,30 @@
   <br>
   <br>
 
- <!-- <div id="carouselExampleFade p-5" class="carousel slide carousel-fade">
+  <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Website Files/assets/Flowers/Purple_Flowers.JPG" class="d-block w-50" alt="Purple flowers.">
+        <img src="Website Files/assets/Blurred_Grass.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/Pink_Flower.JPG" class="d-block w-50" alt="A pink flower.">
+        <img src="Website Files/assets/Flowers/Pink_Flower.JPG" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
-      </div>
-      <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 center" alt="A placeholder image. Please remember to replace this!">
+        <img src="Website Files/assets/Greenhouse_Overview.jpg" class="d-block w-75 img-fluid m-auto text-center" alt="...">
+      </div> <div class="carousel-item">
+        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>-->
+  </div>
 
   <h2> Table</h2>
 
