Added a Table with Fllower names in it

--- a/plants.html
+++ b/plants.html
@@ -76,43 +76,70 @@
     </button>
   </div>
 
-  <h2> Table</h2>
+  <h2> Plant Names, Prices, and Pictures </h2>
 
 <table>
   <tr>
-    <th>Subject</th>
-    <th>Subject</th>
-    <th>Subject</th>
+    <th>Fern Collection</th>
+    <th> Placeholder</th>
+    <th>Placeholder</th>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Sunmagic Echinacea Collection </td>
+    <td> Multi-liner Boldness</td>
+    <td>Multi-liner The Patriot </td>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Trixi-Liner Crystallize</td>
+    <td>Trixi-liner Geisha Girl</td>
+    <td>Trixi-liner Starlight Starbright</td>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Multi-Liner Passion Combos Blackberry Tart</td>
+    <td>Multi-Liner Disco Inferno</td>
+    <td> Companion Foliage-Dracaena indivisia</td>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Companion Foliage-Little Prince Cyperus</td>
+    <td>Companion Foliage-Ipomoea Marguerite</td>
+    <td>Companion Foliage-Ipomoea Blackie</td>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Chameleon Series Calibrachoa Sunshine Berry</td>
+    <td>Chameleon Series Calibrachoa Bluberry Scone</td>
+    <td>Bloomtastic Series Calibrachoa Bloomtastic Yellow</td>
   </tr>
   <tr>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td> Mini Famous Neo Series Calibrachoa Neo Light Pink & Eye</td>
+    <td> Coleus Trailing Series-Burgundy Wedding</td>
+    <td> Coleus Trailing Series Trailing Purple Heart</td>
+  </tr>
+  <tr>
+    <td>  Cuphea Hummingbirds Lunch</td>
+    <td>Fushia-Hanging Series Blue Eyes </td>
+    <td>Fushia-Hanging Series Dark Eyes </td>
+  <tr>
+    <td> Fuschia-Hanging Series Marinka</td>
+    <td> Fushcia-Hanging Series Swingtime</td>
+    <td>Geranium- Americana Series Americana Bright Red </td>
+  </tr>
+  <tr>
+    <td> Geranium-Americana Series Americana White</td>
+    <td> Lobelia Hot water blue</td>
+    <td> Lobelia Hot Snow White</td>
+  </tr>
+    <td>Petunia Capella Series Capella Coral </td>
+    <td>  Petunia Capella Series Capella White</td>
+    <td>Petunia Capella Series Capella Hello Yellow </td>
+  </tr>
+  <tr>
+    <td> Petunia Capella Series Capella Indigo </td>
+    <td>Sufina Trailing Series Heavenly Blackberries and Cream </td>
+    <td>  Surfina Trailing Series Wild Plum</td>
+    </tr>
+    <tr>
+      <td> Amore Series Amore Heart and Soul </td>
+    </tr>
   </tr>
 </table>
 
