--- a/masonry.html
+++ b/masonry.html
@@ -70,122 +70,122 @@
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_130812.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_130828.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Goose</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131051.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Robin</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131100.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Pig</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131104.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Squirell with Acorn</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131111.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Hedgehog</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131114.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>???</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131116.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>????</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131122.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Gnome 1</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131131.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>?????</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131135.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Cat</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131146.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Rat on Log</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131148.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Sleeping Fox</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131151.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Rabbit</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131154.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Gnome 2</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131155.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Welcoming Gnome</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131159.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Two Frogs</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131206.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Fountain</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131210.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Pot</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131228.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Gnome 3</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131235.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Turtle</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131333.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Chipmunk</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131336.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Bear and Cub</td>
+    <td>TBA</td>
   </tr>
   <tr>
     <td><img src="Website Files\assets\masonry\20250505_131343.jpg" alt="A placeholder image. Please remember to replace this!"></td>
-    <td>Placeholder</td>
-    <td>Placeholder</td>
+    <td>Frog</td>
+    <td>TBA</td>
   </tr>
   
 </table>
