--- a/index.html
+++ b/index.html
@@ -109,6 +109,41 @@
             <p>*If you are a <b>Monty Tech Staff member</b>, you may come down on <b>May 8th</b> from <b>3:00pm-5:00pm</b></p>
           </div>
         </div>
+        
+        <hr class="border border-light border-5 rounded">
+        
+        <div class="row text-center mx-auto p-5">
+          <div class="col-sm-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img src="Website Files\assets\Flowers\MT greenhouse photos (updated)\IMG_7746_Blurred.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Check out the plants!</h5>
+                <p class="card-text">Click here to navigate to the plants page, where you can see a list of all the plants with pictures and prices.</p>
+                <a href="plants.html" class="btn btn-warning boxShadowingExpand_hover">Go to plants page</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img src="Website Files/assets/masonry/Bunny.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Browse through statues!</h5>
+                <p class="card-text">Click here to navigate to the masonry page, where you can see a list of all the statues with pictures and prices.</p>
+                <a href="masonry.html" class="btn btn-warning boxShadowingExpand_hover">Go to masonry page</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card mx-auto" style="width: 18rem;">
+              <img src="Website Files/assets/Flowers/Flower Collage.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">See the gallery!</h5>
+                <p class="card-text">Click here to navigate to the gallery page, where you can scroll through all of the photos we took of the plants and greenery.</p>
+                <a href="#" class="btn btn-warning boxShadowingExpand_hover">Go to gallery page</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
