--- a/plants.html
+++ b/plants.html
@@ -59,15 +59,15 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Website Files/assets/Blurred_Grass.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
+        <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7751.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/Pink_Flower.JPG" class="d-block w-50 img-fluid m-auto text-center" alt="...">
+        <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7751.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="Website Files/assets/Greenhouse_Overview.jpg" class="d-block w-75 img-fluid m-auto text-center" alt="...">
+        <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7751.png" class="d-block w-75 img-fluid m-auto text-center" alt="...">
       </div> <div class="carousel-item">
-        <img src="Website Files/assets/Flowers/placeholder.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
+        <img src="Website Files/assets/Flowers/MT greenhouse photos (updated)/IMG_7751.png" class="d-block w-50 img-fluid m-auto text-center" alt="...">
       </div>
     </div>
     </div>
