More visible text??? I think????

--- a/masonry.html
+++ b/masonry.html
@@ -8,6 +8,9 @@
       img{
         width: 10%;
       }
+      body{
+        color: gold;
+      }
     </style>
     <link rel="stylesheet" href="Website Files/styles/style.css">
     <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet'>
