Forgot to close tag

--- a/gallery.html
+++ b/gallery.html
@@ -107,7 +107,7 @@
             </b>
             <div class="row pt-2 pb-2">
                 <div class="col-sm-4">
-                 <a href=""   <img src="Website Files\assets\Flowers\MT greenhouse photos (updated)\IMG_7714.png"
+                 <a href="" ></a>  <img src="Website Files\assets\Flowers\MT greenhouse photos (updated)\IMG_7714.png"
                 alt="Flower in Image name: & Taken by Adam S and & Davis H" title="Flower in Image name: "
                 style="width: 500px; height: auto;">
                 </div>
