--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link current" aria-current="page" href="index.html">Home <svg
+                        <a class="nav-link navbar-item-text" aria-current="page" href="index.html">Home <svg
                                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-house-fill" viewBox="0 0 16 16">
                                 <path
@@ -51,7 +51,7 @@
                             </svg></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbar-item-text" href="gallery.html">Gallery <svg
+                        <a class="nav-link navbar-item-text current" href="gallery.html">Gallery <svg
                                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-card-image" viewBox="0 0 16 16">
                                 <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0" />
@@ -194,7 +194,7 @@
                 <div class="col-sm-4">
                     <a href="https://universaldummy.github.io/MT-Greenhouse-Website/Website%20Files/assets/Flowers/MT%20greenhouse%20photos%20(updated)/IMG_7743.png" ><img src="Website Files\assets\Flowers\MT greenhouse photos (updated)\IMG_7743.png"
                 alt="Flower in Image name: & Taken by Adam S and & Davis H" title="Flower in Image name: "
-                style="width: 500px; height: auto;">
+                style="width: 500px; height: auto;"></a>
                 </div>
                 <div class="col-sm-4">
                     <a href="https://universaldummy.github.io/MT-Greenhouse-Website/Website%20Files/assets/Flowers/MT%20greenhouse%20photos%20(updated)/IMG_7744.png" >  <img src="Website Files\assets\Flowers\MT greenhouse photos (updated)\IMG_7744.png"
