Yay! Look at how much I HATE WEB DEV!
Went on NU HTML CHECKER and I corrected every error with the index and plants files... Time for more!

--- a/SearchResults.html
+++ b/SearchResults.html
@@ -12,7 +12,7 @@
 <body class="text-center bkgd-img-search">
   <nav class="navbar fixed-top navbar-expand-lg bg-success border-bottom border-warning border-5">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;"></a>
+      <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;" alt="..."></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
