--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,7 @@
 <body class=" bkgd-img-index">
     <nav class="navbar fixed-top navbar-expand-lg bg-success border-MT-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png"
-                    class="img-fluid rotate" style="width: 65px;"></a>
+            <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;" alt="..."></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
