--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="text-center bkgd-img-index">
     <nav class="navbar fixed-top navbar-expand-lg bg-success border-MT-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;"></a>
+          <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;" alt="..."></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -115,7 +115,7 @@
         <div class="row text-center mx-auto p-5">
           <div class="col-sm-4">
             <div class="card mx-auto" style="width: 18rem;">
-              <img src="Website_Files\assets\Flowers\MT-greenhouse-photos-(updated)\IMG_7746_Blurred.png" class="card-img-top" alt="...">
+              <img src="Website_Files/assets/Flowers/MT-greenhouse-photos-(updated)/IMG_7746_Blurred.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Check out the plants!</h5>
                 <p class="card-text">Click here to navigate to the plants page, where you can see a list of all the plants with pictures and prices.</p>
