--- a/plants.html
+++ b/plants.html
@@ -15,8 +15,7 @@
 <body class="text-center bkgd-img-plants">
   <nav class="navbar fixed-top navbar-expand-lg bg-success border-bottom border-warning border-5">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png"
-          class="img-fluid rotate" style="width: 65px;"></a>
+      <a class="navbar-brand" href="index.html"><img src="Website_Files/assets/MT_Greenhouse_Favicon.png" class="img-fluid rotate" style="width: 65px;" alt="..."></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -192,9 +191,11 @@
   <div class="p-5">
     <table class="table table-secondary rounded-5">
       <thead>
-        <td>Image</td>
-        <td>Plant Name</td>
-        <td class="">Price</td>
+        <tr>
+          <td>Image</td>
+          <td>Plant Name</td>
+          <td class="">Price</td>
+        </tr>
       </thead>
       <tbody>
         <tr class="text-start">
@@ -342,7 +343,7 @@
           <td class="">$XX.XX</td>
         </tr>
         <tr>
-          <td><img src="Website_Files/assets/Flowers/Geranium-Americana Series Americana White.jpg"
+          <td><img src="Website_Files/assets/Flowers/Geranium-Americana-Series-Americana-White.jpg"
               class="d-block w-25 img-fluid text-center rounded border border-dark border-3" alt="..."></td>
           <td>Geranium-Americana Series Americana White</td>
           <td class="">$XX.XX</td>
